Fixing gap

--- a/src/cdn/elements/grids.css
+++ b/src/cdn/elements/grids.css
@@ -10,7 +10,7 @@
 }
 
 .grid.no-space {
-  --row-gap: 0;
+  --row-gap: 0rem;
 }
 
 .grid.medium-space {
